add: empty welcome screen, welcome image

--- a/app.json
+++ b/app.json
@@ -27,8 +27,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "output": "static"
     },
     "plugins": ["expo-router"],
     "experiments": {
