--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.24",
     "expo-constants": "~16.0.2",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
