--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.0",
     "react-native": "0.74.3",
-    "react-native-camera": "^4.2.1",
     "react-native-date-picker": "^5.0.7",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-permissions": "^5.0.2",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
