--- a/package.json
+++ b/package.json
@@ -45,8 +45,6 @@
     "react-native-date-picker": "^5.0.7",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-permissions": "^5.0.2",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -54,7 +52,9 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
