--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "expo": "~51.0.24",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -38,6 +40,7 @@
     "i18next": "^23.12.2",
     "intl-pluralrules": "^2.0.1",
     "native-base": "^3.4.28",
+    "openai": "^4.0.0-beta.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.0",
@@ -52,9 +55,7 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "yup": "^1.4.0",
-    "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.16"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
