--- a/package.json
+++ b/package.json
@@ -23,35 +23,35 @@
     "axios": "^1.7.3",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.24",
+    "expo": "~52.0.6",
     "expo-barcode-scanner": "~13.0.1",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "^15.0.3",
-    "expo-router": "~3.5.20",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-camera": "~16.0.5",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-localization": "~16.0.0",
+    "expo-router": "~4.0.5",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.9",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.1",
     "formik": "^2.4.6",
     "i18next": "^23.12.2",
     "intl-pluralrules": "^2.0.1",
     "native-base": "^3.4.28",
     "openai": "^4.0.0-beta.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^15.0.0",
-    "react-native": "0.74.3",
+    "react-native": "0.76.1",
     "react-native-date-picker": "^5.0.7",
     "react-native-element-dropdown": "^2.12.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
@@ -61,12 +61,12 @@
     "@babel/core": "^7.20.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
