--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-calendar": "~14.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
